Added questions, timer, and question counter. There is also an animation for incorrect and correct answers.

--- a/game.html
+++ b/game.html
@@ -10,6 +10,24 @@
 <body>
     <div class="container">
         <div id="play" class="justify-center flex-column">
+            <div id="displayinfo">
+                <div id="displayinfo-item">
+                    <p class="displayinfo-prefix">
+                        Question
+                    </p>
+                    <h1 class="displayinfo-main-text" id="questionCounter">
+
+                    </h1>
+                </div>
+                <div id="displayinfo-item">
+                    <p class="displayinfo-prefix">
+                        Score
+                    </p>
+                    <h1 class="displayinfo-main-text" id="score">
+                        0
+                    </h1>
+                </div>
+            </div>
             <h2 id="question">What is the answer to this question?</h2>
             <div class="selection-container">
             <p class="selection-prefix">A</p>
