--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Movie Quiz! - Main Game</title>
-<link rel="stylesheet" href="/css/index.css">
-<link rel="stylesheet" href="/css/game.css">
+<link rel="stylesheet" href="./css/index.css">
+<link rel="stylesheet" href="./css/game.css">
 </head>
 <body>
     <div class="container">
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script src="/js/quiz.js"></script>
+    <script src="./js/quiz.js"></script>
 </body>
 </html>
