--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Quiz</title>
     <link rel="stylesheet" href="./css/index.css">
+  
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-        <h1>Quiz Time!</h1>
+        <h1>Movie Quiz Time!</h1>
         <a class="btn" href="./game.html">Play</a>
         <a class="btn" href="./highscores.html">High Scores</a>
         </div>
