Added final score page and form for user to add their name, updated javascript to work on functionality. Still work in progress, need to store scores locally.

--- a/game.html
+++ b/game.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="./css/game.css">
 </head>
 <body>
-    <div class="container">
-        <div id="play" class="justify-center flex-column">
+    <main class="container">
+        <section id="play" class="justify-center flex-column">
             <div id="displayinfo">
                 <div id="displayinfo-item">
                     <p class="displayinfo-prefix">
@@ -45,8 +45,8 @@
             <p class="selection-prefix">D</p>
             <p class="selection-text" data-number="4">Selection 4</p>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <script src="./js/quiz.js"></script>
 </body>
 </html>
