--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   
 </head>
 <body>
-    <div class="container">
-        <div id="home" class="flex-center flex-column">
+    <main class="container">
+        <section id="home" class="flex-center flex-column">
         <h1>Movie Quiz Time!</h1>
-        <a class="btn" href="./game.html">Play</a>
-        <a class="btn" href="./highscores.html">High Scores</a>
-        </div>
-    </div>
+        <a class="bttn" href="./game.html">Play</a>
+        <a class="bttn" href="./highscores.html">High Scores</a>
+        </section>
+    </main>
     </body>
 </html>
