Quiz is fully functional with high scores but missing countdown aspect. Will add at a later time.

--- a/finalpage.html
+++ b/finalpage.html
@@ -9,13 +9,13 @@
 <body>
     <main class="contain">
         <section id="final" class="flex-column flex-center">
-            <h1 id="finalHiScore">0</h1>
+            <h1 id="finalHiScore"></h1>
             <form>
                 <input
                 type="text"
                 name="playername"
                 id="playername"
-                placeholder="Player Name">
+                placeholder="Enter Initials">
                 <button type="submit" class="bttn" id="saveYourScore"
                 onclick="saveHiScore(event)"
                 disabled>Save</button>
