--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section id="home" class="flex-center flex-column">
         <h1>Movie Quiz Time!</h1>
         <a class="bttn" href="./game.html">Play</a>
-        <a class="bttn" href="./highscores.html">High Scores</a>
+        <a class="bttn" href="./hiscores.html">High Scores</a>
         </section>
     </main>
     </body>
